tests/purs/warning/UnusedExplicitImportValOp.out
Error found:
in module [33mMain[0m
at tests/purs/warning/UnusedExplicitImportValOp.purs:4:1 - 4:39 (line 4, column 1 - line 4, column 39)

  The import of module [33mPrelude[0m contains the following unused references:

    [33m(+)[0m

  It could be replaced with:

    [33mimport Prelude (Unit, pure, unit)[0m



See https://github.com/purescript/documentation/blob/master/errors/UnusedExplicitImport.md for more information,
or to contribute content related to this error.

